# NOTE: The DOLFINx Python interface must be built without build
# isolation (PEP517) due to its runtime and build time dependency on
# system built petsc4py and mpi4py.
# NOTE: petsc4py is an optional build dependency, therefore we don't
# list it here.
[build-system]
requires = ["scikit-build-core[pyproject]>=0.10", "nanobind>=2.5.0", "mpi4py"]
build-backend = "scikit_build_core.build"

[project]
name = "fenics-dolfinx"
version = "0.11.0.dev0"
description = "DOLFINx Python interface"
readme = "../README.md"
requires-python = ">=3.10.0"
license = { file = "../COPYING.LESSER" }
authors = [
      { email = "fenics-steering-council@googlegroups.com" },
      { name = "FEniCS Steering Council" },
]
dependencies = [
      "numpy>=1.21",
      "cffi",
      "mpi4py",
      "fenics-basix>=0.11.0.dev0",
      "fenics-ffcx>=0.11.0.dev0",
      "fenics-ufl>=2025.3.0.dev0",
]

[project.optional-dependencies]
demo = [
  "gmsh",
  "networkx",
  "numba",
  "matplotlib",
  "scipy",
  "pyvista",
]
docs = [
      "breathe",
      "jupytext",
      "markdown",
      "myst_parser",
      "packaging",
      "pyyaml",
      "sphinx",
      "sphinx_rtd_theme",
      "sphinx_codeautolink[ipython]",
      "fenics-dolfinx[demo]",
]
lint = ["ruff>=0.2.0"]
optional = ["numba"]
petsc4py = ["petsc4py"]
test = [
      "matplotlib",
      "networkx",
      "packaging",
      "pytest>=9.0.0",
      "scipy",
      "fenics-dolfinx[optional]",
]
ci = [
      "mypy",
      "pytest-xdist",
      "types-setuptools",
      "fenics-dolfinx[build]",
      "fenics-dolfinx[docs]",
      "fenics-dolfinx[lint]",
      "fenics-dolfinx[optional]",
      "fenics-dolfinx[test]",
]

[tool.scikit-build]
wheel.packages = ["dolfinx"]
sdist.exclude = ["*.cpp"]
cmake.build-type = "Release"
wheel.license-files = ["../COPYING*"]

[tool.pytest]
junit_family = "xunit2"
markers = [
      "skip_in_parallel: marks tests that should be run in serial only.",
      "petsc4py: tests that require PETSc/petsc4py (deselect with '-m \"not petsc4py\"').",
      "adios2: tests that require Adios2 (deselect with '-m \"not adios2\"').",
      "xfail_win32_complex: expected failures for complex numbers in Win32.",
]
addopts = ["-k", "not test_nullspace_check"]

[tool.mypy]
# Suggested at https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
# Goal would be to make all of the below True long-term
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true


[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
      "D",      # pydocstyle
      "E",      # pycodestyle
      "W",      # pycodestyle
      "F",      # pyflakes
      "I",      # isort - use standalone isort
      "RUF",    # Ruff-specific rules
      "UP",     # pyupgrade
      "ICN",    # flake8-import-conventions
      "NPY",    # numpy-specific rules
      "FLY",    # use f-string not static joins
      "NPY201", # numpy 2.x ruleset
]
ignore = ["RUF012"]
allowed-confusables = ["σ", "ρ"]

[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numba", "numpy", "pytest", "pyvista"]
section-order = [
      "future",
      "standard-library",
      "mpi",
      "third-party",
      "first-party",
      "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"demo*.py" = ["D100"] # undocumented-public-module
"test*.py" = [
    "D100",
    "D103",  # undocumented-public-function
    "D205"  # missing-blank-line-after-summary
]
"conf.py" = ["D100", "D103", "D205"]
